# filehasher

./: CMakeLists.txt  LICENSE  README.md  chanel.cpp  chanel.hpp  commondefs.hpp  hasher.cpp  hasher.hpp  main.cpp  misc.cpp  misc.hpp  options.cpp  options.hpp  threading.cpp  threading.hpp
